[gd_scene load_steps=7 format=3 uid="uid://b2tj4hphbtqry"]

[ext_resource type="Texture2D" uid="uid://ujp161flf5dr" path="res://Assets/PNG/Sprites/Ships/spaceShips_001.png" id="1_d6yoj"]
[ext_resource type="Script" path="res://Scripts/player.gd" id="1_nm6uw"]
[ext_resource type="Texture2D" uid="uid://ddwfcvv5kl5bk" path="res://Assets/Partcles/circle_01.png" id="3_slt6q"]
[ext_resource type="Texture2D" uid="uid://dpvx1fr5tag0" path="res://Assets/PNG/Sprites/Effects/spaceEffects_017.png" id="4_q16oy"]
[ext_resource type="PackedScene" uid="uid://swnbao0y2sa0" path="res://Scenes/FuelScene/fuel.tscn" id="4_yfixc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_w30dd"]
radius = 200.062

[node name="Player" type="Area2D" groups=["damagable"]]
position = Vector2(207, 113)
collision_mask = 3
script = ExtResource("1_nm6uw")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PackedVector2Array(-21, 19, -29, -9, -13, -23, -7, -18, -6, -9, -2, -14, 7, -14, 11, -8, 11, -19, 18, -22, 33, -8, 25, 18, 12, 23, -10, 23)

[node name="SpaceShips001" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.976471)
position = Vector2(2, 1)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_d6yoj")
flip_v = true

[node name="WeaponPositions" type="Node2D" parent="."]

[node name="position1" type="Node2D" parent="WeaponPositions"]
position = Vector2(-11, -23)

[node name="position2" type="Node2D" parent="WeaponPositions"]
position = Vector2(15, -23)

[node name="CoolDown" type="Timer" parent="."]
wait_time = 0.6
autostart = true

[node name="shield" type="Sprite2D" parent="."]
visible = false
position = Vector2(2, 2)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_slt6q")

[node name="shieldField" type="Area2D" parent="shield"]
collision_layer = 64
collision_mask = 16
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="shield/shieldField"]
shape = SubResource("CircleShape2D_w30dd")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="InvisibilityTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Fuel" parent="." instance=ExtResource("4_yfixc")]
color = Color(1, 1, 1, 0.968627)

[node name="Fuel2" type="CPUParticles2D" parent="."]
position = Vector2(10, 31)
scale = Vector2(0.8, 0.8)
amount = 3
lifetime = 0.2
local_coords = true
texture = ExtResource("4_q16oy")

[connection signal="timeout" from="CoolDown" to="." method="_on_cool_down_timeout"]
[connection signal="timeout" from="InvisibilityTimer" to="." method="_on_shield_activater_timeout"]
